--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -21,20 +21,17 @@
 		    <div class="row">		    
                 <div class="col-md-3 col-sm-4">
                     <form role="form" onsubmit="return false;">
-                        <h3>请登陆</h3>
+                        <h3>新用户注册</h3>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="用户名">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" placeholder="密码">
                         </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> 记住我
-                            </label>
+                        <div class="form-group">
+                            <input type="password" class="form-control" placeholder="密码确认">
                         </div>
-                        <button type="submit" class="btn btn-primary">登陆</button>
-                        <button type="button" class="btn btn-danger" onclick="location.href='register'">注册</button>
+                        <button type="button" class="btn btn-danger">注册</button>
                     </form>                
                 </div>
 		    </div>
