--- a/web/views/pagelet/IndexJs.html
+++ b/web/views/pagelet/IndexJs.html
@@ -1,6 +1,8 @@
 <!-- Bootstrap -->
 <script type="text/javascript" src="http://localhost:8082/cdn/js/jquery/2.0.2/jquery.min.js?v2.0.2"></script>
 <script type="text/javascript" src="http://localhost:8082/cdn/js/jquery/ext/jquery.pin.js"></script>
+<script type="text/javascript" src="http://localhost:8082/cdn/js/underscore/1.5.1/underscore.min.js"></script>
+<script type="text/javascript" src="http://localhost:8082/cdn/js/jquery/ext/ext.form.js"></script>
 <script type="text/javascript" src="http://localhost:8082/cdn/js/bootstrap/3.0.3/dist/js/bootstrap.js?v3.0.3"></script>
 <script type="text/javascript" src="http://localhost:8082/cdn/js/FlexSlider/2.2.2/jquery.flexslider.js" defer></script>
 
