--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -31,7 +31,8 @@
                         <div class="form-group">
                             <input type="password" id="userPass2" class="form-control" placeholder="密码确认">
                         </div>
-                        <button id="btn_register" type="button" class="btn btn-danger">注册</button>
+                        <button id="btn_register" type="button" class="btn btn-primary">注册</button>
+                        <button type="button" class="btn btn-danger" onclick="history.back()">返回</button>
                     </form>                
                 </div>
 		    </div>
