--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -20,20 +20,20 @@
 		<section class="container">
 		    <div class="row">		    
                 <div class="col-md-3 col-sm-4">
-                    <form role="form" onsubmit="return false;">
+                    <form id="loginForm" role="form" onsubmit="return false;">
                         <h3>请登陆</h3>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="用户名">
+                            <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名">
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="密码">
+                            <input id="userPass" name="UserPass" type="password" class="form-control" placeholder="密码">
                         </div>
                         <div class="checkbox">
                             <label>
                                 <input type="checkbox"> 记住我
                             </label>
                         </div>
-                        <button type="submit" class="btn btn-primary">登陆</button>
+                        <button id="btn_login" type="button" class="btn btn-primary">登陆</button>
                         <button type="button" class="btn btn-danger" onclick="location.href='register'">注册</button>
                     </form>                
                 </div>
@@ -45,6 +45,33 @@
         #parse('pagelet/IndexJs.html')
 
 		<!-- Own -->
+		<script type="text/javascript">
+			function validateForm(){
+				var formObj = $("#loginForm").serializeObjectForm();
+				return formObj;
+			}
+
+			$(function(){
+				$('#btn_login').click(function(){
+					var formObj = validateForm();
+					if(!formObj){
+						alert('表单验证失败')
+						return;
+					}
+
+        			var data = { data: JSON.stringify(formObj) };
+
+					$.ajax({
+						url: '/user/login.do',
+						type: "POST",
+						dataType: "json",
+						data: data
+					}).done(function(responseText) {
+					}).complete(function(){
+					});
+				});
+			});
+		</script>
 
 	</body>
 </html>
