--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -67,6 +67,7 @@
 						dataType: "json",
 						data: data
 					}).done(function(responseText) {
+						console.log(responseText)
 					}).complete(function(){
 					});
 				});
