--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -65,6 +65,7 @@
 						dataType: "json",
 						data: data
 					}).done(function(responseText) {
+						console.log(responseText)
 					}).complete(function(){
 					});
 				});
