--- a/web/views/manage/user/Login.html
+++ b/web/views/manage/user/Login.html
@@ -39,12 +39,20 @@
 			</form>
 		</section>
 
+        #parse('pagelet/IndexJs.html')
+
 		<!-- Own -->
 		<script type="text/javascript">
 			function validateForm(){
 				var formObj = $("#loginForm").serializeObjectForm();
 				return formObj;
 			}
+
+			$(function(){
+				$('#btn_login').click(function(){
+					location.href = '../index'
+				});
+			});
 		</script>
 	</body>
 </html>
