--- a/web/views/pagelet/IndexHeader.html
+++ b/web/views/pagelet/IndexHeader.html
@@ -11,16 +11,16 @@
 <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
 <!--[if lte IE 9]>
-<link rel="stylesheet" type="text/css" href="/cdn/js/bsie/0.0.0/css/bootstrap-ie6.css">
-<link rel="stylesheet" type="text/css" href="/cdn/js/bsie/0.0.0/css/ie.css">
-<link rel="stylesheet" type="text/css" href="/verybsie/css/bootstrap-verybsie.css">
+<link rel="stylesheet" type="text/css" href="${cdn}/bsie/0.0.0/css/bootstrap-ie6.css">
+<link rel="stylesheet" type="text/css" href="${cdn}/bsie/0.0.0/css/ie.css">
+<link rel="stylesheet" type="text/css" href="${cdn}/verybsie/1.0.0/css/bootstrap-verybsie.css">
 <![endif]-->
 
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="/verybsie/css/bootstrap-verybsie.css">
+<link rel="stylesheet" type="text/css" href="${cdn}/verybsie/1.0.0/css/bootstrap-verybsie.css">
 <![endif]-->
 
-<link rel="stylesheet" type="text/css" href="http://localhost:8082/cdn/js/bootstrap/3.0.3/dist/css/bootstrap.css?v3.0.3" media="screen">
-<link rel="stylesheet" type="text/css" href="http://localhost:8082/cdn/js/bootstrap/3.0.3/dist/css/bootstrap-theme.min.css?v3.0.3" media="screen">
-<link rel="stylesheet" type="text/css" href="http://localhost:8082/cdn/js/FlexSlider/2.2.2/flexslider.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap.css?v3.0.3" media="screen">
+<link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap-theme.min.css?v3.0.3" media="screen">
+<link rel="stylesheet" type="text/css" href="${cdn}/FlexSlider/2.2.2/flexslider.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="${virtualPath}public/asset/css/olx/olx.css?v3" media="screen">
