--- a/web/views/tradition/Index.html
+++ b/web/views/tradition/Index.html
@@ -95,6 +95,6 @@
 				}
 			};
 		</script>
-        <script data-main="${virtualPath}public/tradition/index" src="http://localhost:8082/cdn/js/require/2.1.6/require.js"></script>
+        <script data-main="${virtualPath}public/tradition/main" src="http://localhost:8082/cdn/js/require/2.1.6/require.js"></script>
 	</BODY>
 </HTML>
