--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -33,6 +33,14 @@
 			.olx-table-td-center {
 				text-align: center;
 			}
+			.ztree{
+				background: none repeat scroll 0 0 #F0F6E4;
+				border: 1px solid #617775;
+				height: 260px;
+				overflow-x: auto;
+				overflow-y: scroll;
+				width: 220px;
+			}
 	    </style>
 	</head>
 	<body>
