--- a/web/views/manage/Main.html
+++ b/web/views/manage/Main.html
@@ -10,9 +10,9 @@
 		<link rel="stylesheet" type="text/css" href="${cdn}/dhtmlx/3.6/dhtmlxLayout/codebase/dhtmlxlayout.css">
 		<link rel="stylesheet" type="text/css" href="${cdn}/dhtmlx/3.6/dhtmlxLayout/codebase/skins/dhtmlxlayout_dhx_skyblue.css">
 
-		<link rel="stylesheet" type="text/css" href="${virtualPath}public/tradition/style.css">
+		<link rel="stylesheet" type="text/css" href="${virtualPath}public/manage/style.css">
 	<!--[if lt IE 8 ]>
-		<link rel="stylesheet" type="text/css" href="${virtualPath}public/tradition/style.ie8.css">
+		<link rel="stylesheet" type="text/css" href="${virtualPath}public/manage/style.ie8.css">
 	<![endif]-->
 	</HEAD>
 	<BODY class="fore">
@@ -52,7 +52,9 @@
 		<div id="div_foot"><span>版权所有：核心科技</span></div>	
 		<div id="div_tree"></div>
 		<div id="div_center"></div>
-		<!--[if lt IE 10]> <script type="text/javascript" src="${cdn}/html5shiv/3.6.2/html5.js"></script> <![endif]-->
+	<!--[if lt IE 10]>
+		<script type="text/javascript" src="${cdn}/html5shiv/3.6.2/html5.js"></script>
+	<![endif]-->
 		<script>
 			var menuTree = [
 		    	{ModuleId: 1, PModuleId: 0, ModuleName: "系统管理"},
@@ -105,6 +107,6 @@
 				}
 			};
 		</script>
-        <script data-main="${virtualPath}public/tradition/main" src="${cdn}/require/2.1.6/require.js"></script>
+        <script data-main="${virtualPath}public/manage/main" src="${cdn}/require/2.1.6/require.js"></script>
 	</BODY>
 </HTML>
