--- a/web/views/manage/Main.html
+++ b/web/views/manage/Main.html
@@ -3,7 +3,7 @@
 	<HEAD>
 		<meta http-equiv="Content-type" content="text/html;charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<TITLE>核心平台</TITLE>
+		<title>${title}#if($!atitle) - ${atitle}#end</title>
 		<link rel="STYLESHEET" type="text/css" href="${cdn}/dhtmlx/3.6/dhtmlxTabbar/codebase/dhtmlxtabbar.css">
 		<link rel="stylesheet" type="text/css" href="${cdn}/dhtmlx/3.6/dhtmlxTree/codebase/dhtmlxtree.css">
 		<link rel="stylesheet" type="text/css" href="${cdn}/dhtmlx/3.6/dhtmlxAccordion/codebase/skins/dhtmlxaccordion_dhx_skyblue.css">
@@ -56,17 +56,9 @@
 		<script type="text/javascript" src="${cdn}/html5shiv/3.6.2/html5.js"></script>
 	<![endif]-->
 		<script>
-			var menuTree = [
-		    	{ModuleId: 1, PModuleId: 0, ModuleName: "系统管理"},
-		    	{ModuleId: 11, PModuleId: 1, ModuleName: "模块管理"},
-		    	{ModuleId: 13, PModuleId: 1, ModuleName: "角色管理"},
-		    	{ModuleId: 12, PModuleId: 1, ModuleName: "用户管理"},
+			var menuTree = [${modules}];
 
-		    	{ModuleId: 4, PModuleId: 0, ModuleName: "业务平台"},
-		    	{ModuleId: 41, PModuleId: 4, ModuleName: "设备管理", ModuleUrl: "low/cardTypeSet/indexUI.html"}
-		    ];
-
-			var	cdnPath = "${cdn}/";
+			var cdnPath = "${cdn}/";
 			var dhxPath = "dhtmlx/3.6/";
 			var require = {
 				waitSeconds: 0,
