--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -39,7 +39,7 @@
 				height: 260px;
 				overflow-x: auto;
 				overflow-y: scroll;
-				width: 220px;
+				width: 100%;
 			}
 	    </style>
 	</head>
@@ -81,10 +81,10 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-2">
+				<div class="col-md-3">
 					<div id="modTree" class='ztree'></div>
 				</div>
-				<div class="col-md-10">
+				<div class="col-md-9">
  					<div class="panel panel-default table-responsive">
 						<div class="panel-heading">
 							<div class="btn-group">
