--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -11,28 +11,9 @@
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap-theme.min.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="${cdn}/ztree/3.5.15/css/zTreeStyle/zTreeStyle.css" type="text/css">
 
+		<link rel="stylesheet" type="text/css" href="${virtualPath}public/manage/css/style.css">
+
 	    <style type="text/css">
-			body {
-				padding-top: 50px;
-			}
-			.container {
-				width: 100%;
-			}
-			.olx-glyphicon {
-				position: relative;
-				display: inline-block;
-				font-family: "Glyphicons Halflings";
-				-webkit-font-smoothing: antialiased;
-				font-style: normal;
-				font-weight: normal;
-				-moz-osx-font-smoothing: grayscale;
-			}
-			.olx-table-th-center {
-				text-align: center;
-			}
-			.olx-table-td-center {
-				text-align: center;
-			}
 			.ztree{
 				background: none repeat scroll 0 0 #F0F6E4;
 				border: 1px solid #DDDDDD;
