--- a/web/views/manage/role/Index.html
+++ b/web/views/manage/role/Index.html
@@ -78,9 +78,9 @@
 									<td class="olx-table-td-center"><input type="checkbox" value="$role.Id"></td>
 									<td>$role.RoleName</td>
 									<td>$role.RoleDesc</td>
-									<td>$role.StartTime</td>
-									<td>${role.EndTime}</td>
-									<td>${role.CreateTime}</td>
+									<td>$role.sStartTime</td>
+									<td>${role.sEndTime}</td>
+									<td>${role.sCreateTime}</td>
 								</tr>
 								#end
 							</tbody>
