--- a/web/views/manage/user/Index.html
+++ b/web/views/manage/user/Index.html
@@ -72,14 +72,14 @@
 								</tr>
 							</thead>
 							<tbody>
-								#foreach($role in $roles)
+								#foreach($user in $users)
 								<tr>
-									<td class="olx-table-td-center"><input type="checkbox" value="$role.Id"></td>
-									<td>$role.RoleName</td>
-									<td>$role.RoleDesc</td>
-									<td>$role.sStartTime</td>
-									<td>${role.sEndTime}</td>
-									<td>${role.sCreateTime}</td>
+									<td class="olx-table-td-center"><input type="checkbox" value="$user.Id"></td>
+									<td>$user.UserName</td>
+									<td>$user.UserPass</td>
+									<td>$user.sSex</td>
+									<td>${user.sBirthday}</td>
+									<td>${user.sRegTime}</td>
 								</tr>
 								#end
 							</tbody>
