--- a/web/views/manage/devicelog/Index.html
+++ b/web/views/manage/devicelog/Index.html
@@ -17,7 +17,7 @@
 			<ul class="breadcrumb">
 				<li>当前位置：<div class="glyphicon glyphicon-home"></div> <a href="javascript:void(0);" onclick="top.location.href='../index#page/welcome'">首页</a></li>
 				<li class="active">业务管理</li>
-				<li><a href="javascript:void(0);" onclick="location.reload()">设备管理</a></li>				
+				<li><a href="javascript:void(0);" onclick="location.reload()">设备日志</a></li>				
 			</ul>
 		</div>
 
@@ -26,7 +26,7 @@
 				<div class="col-md-12">
 					<div id="info_alert" class="alert alert-info">
 						<button type="button" class="close" data-dismiss="alert">&times;</button>
-						<strong>提示：</strong>设置系统中所有的设备信息。
+						<strong>提示：</strong>设置系统中所有的设备日志信息。
 					</div>
 				</div>
 			</div>
@@ -39,6 +39,9 @@
 						</div>
 						<div class="panel-body">
 							<form class="form-inline" role="form">
+								<div class="form-group">
+									<input type="text" class="form-control" id="inputEmail3" placeholder="设备编号">
+								</div>
 								<div class="form-group">
 									<input type="text" class="form-control" id="inputEmail3" placeholder="设备名称">
 								</div>
@@ -76,9 +79,10 @@
 									<th class="olx-table-th-center"><input type="checkbox" title="全选/取消"></th>
 									<th>设备编号</th>
 									<th>设备名称</th>
-									<th>设备描述</th>
 									<th>设备类型</th>
 									<th>设备拥有者</th>
+									<th>经度</th>
+									<th>纬度</th>
 									<th>创建时间</th>
 								</tr>
 							</thead>
