--- a/web/views/manage/devicelog/Index.html
+++ b/web/views/manage/devicelog/Index.html
@@ -40,6 +40,12 @@
 						<div class="panel-body">
 							<form class="form-inline" role="form">
 								<div class="form-group">
+									<input type="text" class="form-control" id="inputEmail3" placeholder="时间起">
+								</div>
+								<div class="form-group">
+									<input type="text" class="form-control" id="inputEmail3" placeholder="时间止">
+								</div>
+								<div class="form-group">
 									<input type="text" class="form-control" id="inputEmail3" placeholder="设备编号">
 								</div>
 								<div class="form-group">
