--- a/web/public/asset/css/default.less
+++ b/web/public/asset/css/default.less
@@ -192,7 +192,7 @@ a {
 
 @media screen and (min-width: 768px) and (max-width: 1010px) {
 	#bannerSearchForm {
-		display: none;
+		display: none !important;
 	}
 }
 
