--- a/web/views/manage/Main.html
+++ b/web/views/manage/Main.html
@@ -29,11 +29,11 @@
 									<tr>
 										<td height="14" align="right" class="top_a">
 											<a href="#page/welcome">首页</a>&nbsp;|
-											<a href="javascript:void(0);">语言设置</a>&nbsp;|
-											<a href="javascript:void(0);">皮肤设置</a>&nbsp;|
-											<a href="javascript:void(0);">修改密码</a>&nbsp;|
-											<a href="javascript:void(0);">使用帮助</a>&nbsp;|
-											<a href="javascript:void(0);" id="a_quit" class="quit_a">安全退出</a>
+											<a href="javascript:;">语言设置</a>&nbsp;|
+											<a href="javascript:;">皮肤设置</a>&nbsp;|
+											<a href="javascript:;">修改密码</a>&nbsp;|
+											<a href="javascript:;">使用帮助</a>&nbsp;|
+											<a href="javascript:;" id="a_quit" class="quit_a">安全退出</a>
 										</td>
 										<td align="right">&nbsp;</td>
 									</tr>
