--- a/web/views/manage/device/Index.html
+++ b/web/views/manage/device/Index.html
@@ -15,9 +15,9 @@
 	<body>
 		<div class="navbar navbar-fixed-top" role="navigation">
 			<ul class="breadcrumb">
-				<li>当前位置：<div class="glyphicon glyphicon-home"></div> <a href="javascript:void(0);" onclick="top.location.href='../index#page/welcome'">首页</a></li>
+				<li>当前位置：<div class="glyphicon glyphicon-home"></div> <a href="javascript:;" onclick="top.location.href='../index#page/welcome'">首页</a></li>
 				<li class="active">业务管理</li>
-				<li><a href="javascript:void(0);" onclick="location.reload()">设备管理</a></li>				
+				<li><a href="javascript:;" onclick="location.reload()">设备管理</a></li>				
 			</ul>
 		</div>
 
