--- a/web/views/manage/devicelog/Index.html
+++ b/web/views/manage/devicelog/Index.html
@@ -74,7 +74,7 @@
 						<div class="panel-heading">
 							<div class="btn-group">
 							    <button id="btn_del" class="btn btn-danger olx-glyphicon glyphicon-remove-sign olx-glyphicon-btn">删除</button>
-							    <button class="btn btn-info olx-glyphicon glyphicon-plus-sign olx-glyphicon-btn" data-toggle="modal" data-target="#addModal">查看地图</button>
+							    <button class="btn btn-info olx-glyphicon glyphicon-globe olx-glyphicon-btn" data-toggle="modal" data-target="#addModal">查看地图</button>
 							</div>
  						</div>
  						
