--- a/web/views/user/Analytics.html
+++ b/web/views/user/Analytics.html
@@ -2,15 +2,6 @@
 <html lang="zh-CN">
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<style>
-		    #footer 
-		    {
-		    	position:fixed;
-		    	left:0;
-		    	bottom:0;
-		    	width:100%;
-		    }
-		</style>
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
@@ -18,26 +9,116 @@
 		<header id="header"></header>
 
 		<section class="container">
-		    <div class="row">		    
-                <div class="col-md-3 col-sm-4">
-                    <form id="loginForm" role="form" onsubmit="return false;">
-                        <h3>请登陆</h3>
-                        <div class="form-group">
-                            <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名">
-                        </div>
-                        <div class="form-group">
-                            <input id="userPass" name="UserPass" type="password" class="form-control" placeholder="密码">
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> 记住我
-                            </label>
-                        </div>
-                        <button id="btn_login" type="button" class="btn btn-primary">登陆</button>
-                        <button type="button" class="btn btn-danger" onclick="location.href='register'">注册</button>
-                    </form>                
-                </div>
-		    </div>
+			<div class="row">
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>概要</strong></h3>
+						</div>
+						<div class="panel-body">
+							<p>我的设备：3个</p>
+							<p>搜索：3个</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>地图</strong></h3>
+						</div>
+						<div class="panel-body">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>概要</strong></h3>
+						</div>
+						<div class="panel-body">
+							<p>我的设备：3个</p>
+							<p>搜索：3个</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>地图</strong></h3>
+						</div>
+						<div class="panel-body">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>概要</strong></h3>
+						</div>
+						<div class="panel-body">
+							<p>我的设备：3个</p>
+							<p>搜索：3个</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>地图</strong></h3>
+						</div>
+						<div class="panel-body">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>概要</strong></h3>
+						</div>
+						<div class="panel-body">
+							<p>我的设备：3个</p>
+							<p>搜索：3个</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>地图</strong></h3>
+						</div>
+						<div class="panel-body">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>概要</strong></h3>
+						</div>
+						<div class="panel-body">
+							<p>我的设备：3个</p>
+							<p>搜索：3个</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-6">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<h3 class="panel-title"><strong>地图</strong></h3>
+						</div>
+						<div class="panel-body">
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 
         #parse('pagelet/IndexFooter.html')
