--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -10,6 +10,7 @@
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap.min.css" media="screen">
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap-theme.min.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="${cdn}/ztree/3.5.15/css/zTreeStyle/zTreeStyle.css" type="text/css">
+	    <link rel="stylesheet" type="text/css" href="${cdn}/olxjs/1.0.0/css/olx/olx.css" media="screen">
 
 		<link rel="stylesheet" type="text/css" href="${virtualPath}public/manage/css/style.css">
 
@@ -102,6 +103,102 @@
 			</div>
 		</div>
 
+		<div id="editModal" class="modal fade" aria-hidden="true" aria-labelledby="editModalLabel" role="dialog" tabindex="-1">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button class="close" aria-hidden="true" data-dismiss="modal" type="button">×</button>
+						<h4 id="editModalLabel" class="modal-title"><b>编辑</b></h4>
+					</div>
+					<form id="editForm" name="editForm" data-olx-type="olx.form" class="form-horizontal" role="form" data-url="edit.do">
+						<div class="modal-body">
+							<div class="form-group">
+								<label for="editForm_customerName" class="col-sm-3 control-label"><span class="olx-form-required">*</span>模块名称</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" data-pattern="^\d{6}$" data-required="true" class="form-control" id="editForm_customerName" name="editForm_customerName" placeholder="模块名称" data-placement="bottom" data-original-title="请输入正确的格式。" autofocus>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editForm_customerNameAddr" class="col-sm-3 control-label">模块地址</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editForm_customerNameAddr" name="editForm_customerNameAddr" placeholder="模块地址">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editForm_telNum" class="col-sm-3 control-label">排序</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editForm_telNum" name="editForm_telNum" placeholder="排序">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="editForm_email" class="col-sm-3 control-label">创建时间</label>
+								<div class="col-sm-7">
+									<input type="text" data-olx-type="olx.form.input" class="form-control" id="editForm_email" name="editForm_email" placeholder="创建时间">
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button class="btn btn-default" data-dismiss="modal" type="button">关闭</button>
+							<button class="btn btn-warning" type="reset">重置</button>
+							<button class="btn btn-primary" type="submit">保存</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="delConfirmModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title"><b>警告</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>你确认执行该删除操作吗？</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+						<button type="button" class="btn btn-primary" id="delConfirmModal_btn_submit">确认</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
+		<div class="modal fade" id="delAlertModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title"><b>提示</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>请选择需要删除的记录！</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
+		<div class="modal fade" id="editAlertModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title"><b>提示</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>请选择一条需要编辑的记录！</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
 		<script type="text/javascript" src="${cdn}/jquery/2.0.2/jquery.min.js"></script>
 		<script type="text/javascript" src="${cdn}/bootstrap/3.0.3/dist/js/bootstrap.js"></script>
         <script type="text/javascript" src="${cdn}/underscore/1.5.1/underscore.min.js"></script>
@@ -138,6 +235,30 @@
 				$ .fn.zTree.init($("#modTree"), setting, modules);
 			});
 
+			$("#editModal").on("show.bs.modal", function (e) {
+				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
+				if(1 != vals.length) {
+					$("#editAlertModal").modal();
+					return e.preventDefault();
+				}
+			})
+
+			$("#btn_edit").click(function(){
+				$("#editModal").modal();
+			});
+
+			$("#delConfirmModal").on("show.bs.modal", function (e) {
+				var vals = $("#table1").olxGrid("getCheckedRowsValue", 1);
+				if(!vals.length) {
+					$("#delAlertModal").modal();
+					return e.preventDefault();
+				}
+			})
+
+			/* 绑定删除按钮，弹出提示对话框或确认对话框 */
+			$("#btn_del").click(function(){
+				$("#delConfirmModal").modal();
+			});
 		</script>
 	</body>
 </html>
