--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -10,7 +10,7 @@
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap.min.css" media="screen">
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap/3.0.3/dist/css/bootstrap-theme.min.css" media="screen">
 	    <link rel="stylesheet" type="text/css" href="${cdn}/bootstrap-datetimepicker/2.2.0/css/bootstrap-datetimepicker.min.css" media="screen">
-		<link rel="stylesheet" type="text/css" href="${cdn}/ztree/3.5.15/css/zTreeStyle/zTreeStyle.css" type="text/css">
+		<link rel="stylesheet" type="text/css" href="${cdn}/ztree/3.5.15/css/zTreeStyle/zTreeStyle.css">
 	    <link rel="stylesheet" type="text/css" href="${cdn}/olxjs/1.0.0/css/olx/olx.css" media="screen">
 
 		<link rel="stylesheet" type="text/css" href="${virtualPath}public/manage/css/style.css">
@@ -294,8 +294,15 @@
 				module.open = true;
 			}
 
+			modules.push({
+				id: '0',
+				pid: 'root',
+				name: '根',
+				open: true
+			});
+
 			$(function(){
-				$ .fn.zTree.init($("#modTree"), setting, modules);
+				$.fn.zTree.init($("#modTree"), setting, modules);
 			});
 
 			$("#editModal").on("show.bs.modal", function (e) {
