--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -76,29 +76,7 @@
 							    <button id="btn_del" class="btn btn-danger olx-glyphicon glyphicon-remove-sign olx-glyphicon-btn">删除</button>
 							</div>
  						</div>
- 						
-						<table id="table1" data-olx-type="olx.grid" class="table table-bordered table-hover table-condensed table-striped" data-url="grid_2.html" data-current="2" data-pagesize="20" data-count="561">
-							<thead>
-								<tr>
-									<th class="olx-table-th-center"><input type="checkbox" title="全选/取消"></th>
-									<th>#</th>
-									<th>模块名称</th>
-									<th>模块地址</th>
-									<th>排序</th>
-									<th>创建时间</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td class="olx-table-td-center"><input type="checkbox" value="1"></td>
-									<td>1</td>
-									<td>4255563853</td>
-									<td>张三</td>
-									<td>男</td>
-									<td>2013/12/11 10:50:57</td>
-								</tr>
-							</tbody>
-						</table>
+ 						#parse("Manage/Module/ModuleList.html")
 					</div>
 				</div>
 			</div>
