--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -29,9 +29,9 @@
 	<body>
 		<div class="navbar navbar-fixed-top" role="navigation">
 			<ul class="breadcrumb">
-				<li>当前位置：<div class="glyphicon glyphicon-home"></div> <a href="javascript:;" onclick="top.location.href='../index#page/welcome'">首页</a></li>
+				<li>当前位置：<div class="glyphicon glyphicon-home"></div> 首页</li>
 				<li class="active">系统管理</li>
-				<li><a href="javascript:;" onclick="location.reload()">模块管理</a></li>				
+				<li><a href="javascript:;" onclick="location.reload()">模块管理</a></li>
 			</ul>
 		</div>
 
