--- a/web/views/manage/user/Login.html
+++ b/web/views/manage/user/Login.html
@@ -25,10 +25,10 @@
 			<form id="loginForm" role="form" onsubmit="return false;">
 			    <h3>后台登陆</h3>
 			    <div class="form-group">
-			        <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名">
+			        <input id="userName" name="UserName" type="text" class="form-control" placeholder="用户名" value="admin">
 			    </div>
 			    <div class="form-group">
-			        <input id="userPass" name="UserPass" type="password" class="form-control" placeholder="密码">
+			        <input id="userPass" name="UserPass" type="password" class="form-control" placeholder="密码" value="111111">
 			    </div>
 			    <div class="checkbox">
 			        <label>
