--- a/web/views/manage/module/Index.html
+++ b/web/views/manage/module/Index.html
@@ -277,12 +277,18 @@
 								})
 							}
 						}).done(function(responseText) {
-							if(responseText.success){
-								var tab1 = $('#table1');
-								var prev = tab1.prev();
-								tab1.remove();
-								prev.after(responseText.msg);
+							if(responseText.code){
+								if(300 === responseText.code){
+									top.location.href = '/manage/user/login';
+									return;
+								}
 							}
+
+							var tab1 = $('#table1');
+							var prev = tab1.prev();
+							tab1.remove();
+
+							if(responseText.success) prev.after(responseText.msg);
 						}).complete(function(){
 						});
 					}
