--- a/web/views/manage/module/ModuleList.html
+++ b/web/views/manage/module/ModuleList.html
@@ -1,4 +1,4 @@
-<table id="table1" data-olx-type="olx.grid" class="table table-bordered table-hover table-condensed table-striped" data-url="grid_2.html" data-current="2" data-pagesize="20" data-count="561">
+<table id="table1" data-olx-type="olx.grid" class="table table-bordered table-hover table-condensed table-striped" data-url="/manage/module/list" data-current="1" data-pagesize="20" data-count="561">
 	<thead>
 		<tr>
 			<th class="olx-table-th-center"><input type="checkbox" title="全选/取消"></th>
